infra/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mon-projet-ingress
  namespace: default # Assure-toi que c'est le namespace de ton gateway-service
  annotations:
    # On lie l'Ingress au cert-manager créé à l'étape 1
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    # On force Traefik à utiliser le port HTTPS (443)
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - 35.89.190.40.sslip.io
    secretName: projet-tls-secret # Le certificat généré sera stocké ici
  rules:
  - host: 35.89.190.40.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-service # Le nom exact de ton service Kubernetes
            port:
              number: 3000
